syntax = "proto3";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (ImageRequest) returns (ImageReply) {}
}

// The request message containing the user's name.
message ImageRequest {
  int32 width = 1;
  int32 height = 2;
  bytes image = 3;
  int32 type = 4;
  int32 pixelBits = 5;
  int32 numComponents = 6;
  int32 transparency = 7;
  bool hasalpah = 8;
  bool isalphapre = 9;
}

// The response message containing the greetings
message ImageReply {
  string message = 1;
}